--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "add": "^2.0.6",
         "cordova": "^9.0.0",
         "cordova-plugin-keyboard": "^1.2.0",
+        "js-cookie": "^2.2.1",
         "karma-chai": "^0.1.0",
         "plugin": "^0.3.3",
         "vue": "^2.5.2",
